--- a/css/transporte.css
+++ b/css/transporte.css
@@ -187,3 +187,20 @@ line-height: 1.2em;
 .servicio:nth-child(odd) .info{
     float: right;
 }
+/* fin servicios */
+/* inicio galeria */
+.galeria .foto{
+    float: left;
+    width: 18%;
+    margin: 1em 0 1em 2.5%;
+    border: 1px solid #ddd;
+    padding: 0.3em;
+    box-sizing: border-box;
+}
+.galeria .foto img{
+    width: 100%;
+    display: block;
+}
+.galeria .foto:nth-child(5n+1){
+    margin-left: 0;
+}
